# Coq-Tooling-Project

./: .gitignore  README.md
notes/: api.md
project/: _CoqProject  makefile
project/dune/: dune-project
project/dune/module_interface/: dune
project/dune/module_interface/Conversions/TYPE_OF_TYPEOID/: TYPE_OF_TYPEOID.v  dune
project/dune/module_interface/NNT/: dune
project/dune/module_interface/Relations/: Relations.v
project/dune/module_interface/Relations/Binary/: Binary_Relations.v
project/dune/module_interface/TYPE/: TYPE.v  dune
project/dune/module_interface/TYPEOID/: TYPEOID.v  dune
project/dune/wolly_coq_plugin/: dune  syntax.mlg
