(lang dune 3.11)
 (using coq 0.8)


 (package 
  (allow_empty) ; temporary till development started propper
  (name module_interface)
  (synopsis "")
  (description "")
  (depends )
  )

 (package 
  (allow_empty) ; temporary till development started propper
  (name wolly_coq_plugin)
  (synopsis "")
  (description "")
  (depends ))
